[gd_scene load_steps=12 format=3 uid="uid://dubhlqa5a3rmg"]

[ext_resource type="Script" path="res://scenes/interface_base/battlesim/buddy/buddy.gd" id="1_42604"]
[ext_resource type="Texture2D" uid="uid://bnub0wwjilltd" path="res://assets/art/map/friendly_minion.png" id="1_j8mvj"]
[ext_resource type="Script" path="res://scenes/interface_base/battlesim/buddy/character_body_2d.gd" id="2_blne7"]
[ext_resource type="Shader" path="res://effects/white_flash_material.gdshader" id="3_4djgo"]
[ext_resource type="PackedScene" uid="uid://bsqfqqlswcbnk" path="res://scenes/interface_base/battlesim/utility/health_bar/health_bar.tscn" id="4_c6esc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vo77t"]
resource_local_to_scene = true
shader = ExtResource("3_4djgo")

[sub_resource type="CircleShape2D" id="CircleShape2D_ofyew"]
radius = 20.0

[sub_resource type="Animation" id="Animation_eipv0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="Animation" id="Animation_d0obn"]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [null, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f7tik"]
_data = {
"RESET": SubResource("Animation_eipv0"),
"flash": SubResource("Animation_d0obn")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0lukq"]
radius = 50.0

[node name="Buddy" type="PathFollow2D" groups=["buddy", "restart_map"]]
rotates = false
script = ExtResource("1_42604")
_health = 800.0
_damage = 100.0
_att_speed = 0.5

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["buddy"]]
collision_mask = 18
script = ExtResource("2_blne7")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
material = SubResource("ShaderMaterial_vo77t")
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_j8mvj")

[node name="HitBox" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_ofyew")

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_f7tik")
}

[node name="AttTimer" type="Timer" parent="CharacterBody2D"]
unique_name_in_owner = true

[node name="HealthBar" parent="CharacterBody2D" instance=ExtResource("4_c6esc")]
unique_name_in_owner = true
offset_left = -40.0
offset_top = -50.0
offset_bottom = -43.0

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_0lukq")

[connection signal="timeout" from="CharacterBody2D/AttTimer" to="." method="_on_att_timer_timeout"]
[connection signal="died" from="CharacterBody2D/HealthBar" to="." method="_on_health_bar_died"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
